reworked testcases, test running without multiple maven repositories now